finish Layout desktop

--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
             <button class="google"><img src="/assets/images/google.svg" alt=""> Ou faça login com o Google</button>
 
           </form>
+          <p class="sign-up">Não tem uma conta? <span>Cadastre-se</span></p>
         </div>
       </div>
 
